<resources>
    <string name="app_name">Where\'s My Brush?</string>

    <!-- activity_catalog strings -->
    <string name="empty_view_title_text">Whoops! There are no brushes.</string>
    <string name="empty_view_description">Press Add - enter name, quantity and price!</string>

    <!-- activity_editor strings -->
    <string name="editor_title">Inventory</string>
    <string name="hint_product_name">paint brush</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_inventory">Edit Inventory</string>
    <string name="price">Price</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="quantity">Quantity</string>


    <!-- supplier spinner strings -->
    <string name="supplier1">Brushs Galore</string>
    <string name="supplier2">Brushtastic</string>
    <string name="supplier3">Unknown</string>

    <!-- toast -->
    <string name="insert_supply_failed">Failed to add brush to database</string>
    <string name="insert_supply_successful">Brush successfully added</string>
    <string name="update_failed">Update Failed</string>
    <string name="update_finished">Update Finished</string>
    <string name="delete_inventory">Delete complete</string>
    <string name="blank_inventory_fail">Cannot add blank inventory </string>

    <!-- toast input check -->
    <string name="must_have_name">Must have valid name</string>
    <string name="must_have_price">Must have valid price</string>
    <string name="must_have_quantity">Must have valid quantity</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="cannot_go_below_one_editor">Cannot go below 1 in editor screen</string>
    <string name="cannot_go_above_editor">Cannot go above 9999 in editor screen</string>
    <string name="cannot_add_to_none">Cannot use button on null quantity</string>

    <!--- builder -->
    <string name="unsaved_changes">Changes unsaved</string>
    <string name="discard">Get rid of changes?</string>
    <string name="edit">Keep editing?</string>
    <string name="add_button">Add</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="quantity_list_item_text">Quantity:</string>
    <string name="sale_button">sale</string>
    <string name="supplier">Supplier</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete_confirm">Are you sure you want to delete this brush?</string>
    <string name="cancel_question">Cancel?</string>
    <string name="call">Call</string>


</resources>
